--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = melanoma_classifier
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+user = bwolfson
+description = My submission to kaggle's SIIM-ISIC Melanoma Classification competition, packaged up for easy use.
+keywords = nbdev kaggle classification
+author = Brandon Wolfson
+author_email = bwolfson97@gmail.com
+copyright = Brandon Wolfson
 branch = master
 version = 0.0.1
 min_python = 3.6
@@ -37,7 +37,7 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
